# extauthz-cfzt

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  cloudflared.yaml  compose.yaml  envoy.yaml
.github/workflows/: docker.yaml
src/: errors.rs  helpers.rs  main.rs  socket.rs
src/config/: discovery.rs  mod.rs  schema.rs
src/config/audience/: discovery.rs  schema.rs
src/config/bootstrap/: discovery.rs  schema.rs
src/server/: extauthz.rs  mod.rs  request.rs  response.rs  validator.rs
