[package]
name = "extauthz-cfzt"
version = "0.3.3"
edition = "2021"
include = ["src/**/*.rs"]

[dependencies]
envoy-types = "0.2.0"
phf = { version = "0.11.2", features = ["macros"]}
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tonic = "0.9.2"
tokio-cron-scheduler = "0.13.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jnt = "0.2.0"
rust-cfzt-validator = "0.3.1"
url = "2.5.4"
log = "0.4.22"
env_logger = "0.11.5"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.mimalloc]
version = "0.1.43"
