[package]
name = "extauthz-cfzt"
version = "0.4.0"
edition = "2021"
include = ["src/**/*.rs"]

[dependencies]
envoy-types = "0.7.0"
phf = { version = "0.11.2", features = ["macros"]}
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tonic = "0.14.1"
tokio-cron-scheduler = "0.14.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
jnt = "0.2.0"
rust-cfzt-validator = "0.6.0"
url = "2.5.4"
log = "0.4.27"
env_logger = "0.11.8"
ureq = "3.0.12"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.mimalloc]
version = "0.1.47"
